Fixed: position and spacing (back btn)

--- a/app/views/styles/component/_form_footer.scss
+++ b/app/views/styles/component/_form_footer.scss
@@ -20,7 +20,8 @@
                 min-width: 180px;
                 position: static;
                 min-height: 32px;
-                margin-bottom: 30px;
+                // hittine - remove marginBottom
+                // margin-bottom: 30px;
                 margin-left: 20px;
                 margin-right: 20px;
 
@@ -56,7 +57,7 @@
                 // This button is absolutely positioned to avoid
                 // it pushing up other form footer content when it becomes
                 // visible on page 2 and higher.
-                position: absolute;
+                // position: absolute;
                 left: 5px;
                 bottom: 5px;
             }
@@ -96,7 +97,8 @@
 
                     width: 17px;
                     height: 16px;
-                    margin-top: 2px;
+                     // hittine - center icon
+                    margin-top: 8px;
                     margin-left: -22px;
                     content: ' ';
                     float: left;
@@ -111,7 +113,8 @@
 
                     width: 24px;
                     height: 16px;
-                    margin-top: 2px;
+                    // hittine - center icon
+                    margin-top: 8px;
                     margin-right: -22px;
                     content: ' ';
                     float: right;
